package fr.unilim.iut.model;

public class Constante {

    public static final int ESPACEJEU_LONGUEUR = 500;
    public static final int ESPACEJEU_HAUTEUR = 450;

    public static final int VAISSEAU_LONGUEUR = 40;
    public static final int VAISSEAU_HAUTEUR = 20;
    public static final int VAISSEAU_VITESSE = 6;

    public static final char MARQUE_FIN_LIGNE = '\n';
    public static final char MARQUE_VIDE = '.';
    public static final char MARQUE_VAISSEAU = 'V';
    public static final char MARQUE_MISSILE = 'M';
    public static final char MARQUE_ENVAHISSEUR = 'E';

    public static final int MISSILE_LONGUEUR = 5;
    public static final int MISSILE_HAUTEUR = 20;
    public static final int MISSILE_VITESSE = 8;

    public static final int ENVAHISSEUR_LONGUEUR = 25;
    public static final int ENVAHISSEUR_HAUTEUR = 25;
    public static final int ENVAHISSEUR_VITESSE = 5;

    public static final int TEMPS_ENTRE_DEUX_MISSILES = 250;
}
