package fr.unilim.iut.model;

public class Dimension {

    int longueur;
    int hauteur;

    public Dimension(int longueur, int hauteur) {
        this.longueur = longueur;
        this.hauteur = hauteur;
    }

    public int longueur() {
        return longueur;
    }

    public int hauteur() {
        return hauteur;
    }
}
