package fr.unilim.iut.model;

public class Missile extends Sprite {

    public Missile(Dimension dimension, Position origine, int vitesse) {
        super(dimension, origine, vitesse);
    }

}
